--- a/modules/week-3/lecture-zk/zkp-smc-slides.tex
+++ b/modules/week-3/lecture-zk/zkp-smc-slides.tex
@@ -11,11 +11,8 @@
   Daniel Bosk
 }
 \institute[KTH/MIUN]{%
-  School of Computer Science and Communication,\\
+  School of Electrical Engineering and Computer Science,\\
   KTH Royal Institute of Technology, Stockholm
-  \and
-  Department of Information and Communication Systems,\\
-  Mid Sweden University, Sundsvall
 }
 \date{\today}
 
