--- a/modules/week-4/tutorial-digital-postbox/contents.tex
+++ b/modules/week-4/tutorial-digital-postbox/contents.tex
@@ -15,7 +15,7 @@ After the protocol lecture series (Week 5), we will return to your designs in
 Week 6 and use the protocol tools to make the missing parts explicit.
 
 Document your group's design in your group's tab in
-\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}.
+\href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
 
 \ltnote{%
   Pedagogical intent (try-first-tell-later + variation theory):
@@ -55,23 +55,70 @@ Document your group's design in your group's tab in
   What functionality do we need? (High level)
 \end{exercise}
 
-\begin{onlyenv}<2>
-  \begin{solution}
-    We'd need at least the following:
-    \begin{itemize}
-      \item Registration
-      \item Sending mail
-      \item Reading mail
-    \end{itemize}
-  \end{solution}
-\end{onlyenv}
+\mode<presentation>{%
+  \begin{onlyenv}<2>
+    \begin{solution}
+      We'd need at least the following:
+      \begin{itemize}
+        \item Registration
+        \item Sending mail
+        \item Reading mail
+      \end{itemize}
+    \end{solution}
+  \end{onlyenv}
+}
 \end{frame}
+
+\mode<article>{%
+\begin{solution}[Sketch]
+  At a high level, a digital postbox service needs at least:
+  \begin{itemize}
+    \item registration (create an account tied to a real identity),
+    \item sending (submit a letter to a recipient address),
+    \item reading (retrieve and open received letters).
+  \end{itemize}
+  Typical additional functionality that quickly becomes necessary in practice:
+  \begin{itemize}
+    \item key management (publish/rotate/revoke keys),
+    \item recovery (lost device/credentials),
+    \item delegation (e.g., power of attorney),
+    \item auditing and dispute handling.
+  \end{itemize}
+\end{solution}
+}
+
+\mode<article>{%
+\begin{center}
+  \rule{0.8\linewidth}{0.4pt}
+\end{center}
+}
 
 \begin{frame}
 \begin{exercise}[Requirements]
   What are the requirements on the service?
 \end{exercise}
 \end{frame}
+
+\mode<article>{%
+\begin{solution}[Sketch]
+  A reasonable first list of requirements is:
+  \begin{itemize}
+    \item confidentiality of letter contents against intermediaries,
+    \item authenticity/integrity (recipient can verify who sent what),
+    \item access control (only the owner/delegate can read),
+    \item availability (mail must be reachable when needed),
+    \item clear trust assumptions and a recovery story.
+  \end{itemize}
+  Note that even if contents are protected end-to-end, metadata (who talks to
+  whom, when, and roughly how much) is typically still observable.
+\end{solution}
+}
+
+\mode<article>{%
+\begin{center}
+  \rule{0.8\linewidth}{0.4pt}
+\end{center}
+}
 
 We have the following requirements on the service:
 \begin{frame}
@@ -104,7 +151,7 @@ We have the following requirements on the service:
   \begin{remark}
     DIGG\footnote{Myndigheten för digital förvaltning} sets the official 
     requirements, see
-    \url{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}.
+    \href{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}{DIGG: security requirements for postbox operators}.
   \end{remark}
 \end{frame}
 
@@ -154,13 +201,17 @@ provide and why?
     \end{exercise}
 
     \begin{block}{Organization}
+      \footnotesize
       \begin{itemize}
+        \setlength{\itemsep}{0pt}
+        \setlength{\parskip}{0pt}
+        \setlength{\parsep}{0pt}
         \item Groups of around three--four people.
         \item First sketch the full service together.
         \item Then pick one of the three functionalities.
         \item \alert<2>{Try to go into detail: detail the crypto protocol.}
         \item Document in your group's tab:
-          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
+          \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}
         \item Work for 20 minutes.
         \item Group presentations and discussions.
       \end{itemize}
@@ -186,6 +237,27 @@ provide and why?
   \end{frame}
 }
 
+\mode<article>{%
+\begin{solution}[Sketch]
+  One common starting point is:
+  \begin{itemize}
+    \item a directory mapping recipient addresses to public keys (including
+      status: current/\allowbreak revoked),
+    \item hybrid encryption for letters (random symmetric key + public-key
+      encryption of that key to the recipient),
+    \item sender authentication via digital signatures on the letter.
+  \end{itemize}
+  The hard parts tend to be lifecycle questions (key rotation, revocation,
+  recovery) and defining what the service is trusted to learn and to do.
+\end{solution}
+}
+
+\mode<article>{%
+\begin{center}
+  \rule{0.8\linewidth}{0.4pt}
+\end{center}
+}
+
 Notes from the session:
 \begin{itemize}
   \item Same as Signal protocol.
@@ -200,6 +272,27 @@ Notes from the session:
     How does this compare to the physical mail service?
   \end{exercise}
 \end{frame}
+
+\mode<article>{%
+\begin{solution}[Sketch]
+  Separate content from metadata.
+  End-to-end protection can hide letter contents from the operator, but the
+  operator may still learn (depending on design):
+  \begin{itemize}
+    \item sender and recipient identifiers (or at least routing identifiers),
+    \item timestamps, frequency, and rough size,
+    \item device/IP-level metadata (unless mitigated).
+  \end{itemize}
+  Compare to physical mail: the postal service sees envelope address fields and
+  handling times, but not the letter contents.
+\end{solution}
+}
+
+\mode<article>{%
+\begin{center}
+  \rule{0.8\linewidth}{0.4pt}
+\end{center}
+}
 
 \mode<presentation>{%
   \begin{frame}
@@ -222,10 +315,14 @@ Notes from the session:
     \pause
 
     \begin{block}{Organization}
+      \footnotesize
       \begin{itemize}
+        \setlength{\itemsep}{0pt}
+        \setlength{\parskip}{0pt}
+        \setlength{\parsep}{0pt}
         \item Groups of around three--four people.
         \item Work for 20 minutes, document: 
-          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}.
+          \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
         \item Group presentations and discussions.
       \end{itemize}
     \end{block}
@@ -250,6 +347,27 @@ Notes from the session:
   \end{frame}
 }
 
+\mode<article>{%
+\begin{solution}[Sketch]
+  Start by stating precisely what should be hidden and from whom.
+  \begin{itemize}
+    \item Weak sender anonymity: hide the sender from the service (but not
+      necessarily from the recipient).
+    \item Sender anonymity: hide the sender from both service and recipient.
+    \item Sender--receiver anonymity: additionally hide the recipient from the
+      service.
+  \end{itemize}
+  Typical building blocks (kept deliberately high level): unlinkable payment or
+  access tokens, relays/mix networks, and careful metadata minimization.
+\end{solution}
+}
+
+\mode<article>{%
+\begin{center}
+  \rule{0.8\linewidth}{0.4pt}
+\end{center}
+}
+
 
 \section{Digital identity}
 
@@ -260,7 +378,23 @@ Notes from the session:
         system?
         How can we achieve those requirements?
       \item Document in your group's tab:
-        \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}.
+        \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
     \end{itemize}
   \end{exercise}
 \end{frame}
+
+\mode<article>{%
+\begin{solution}[Sketch]
+  Identity requirements for a postbox service often include:
+  \begin{itemize}
+    \item strong binding from account to a real person (and sometimes address),
+    \item authentication with appropriate assurance (phishing and
+      account-takeover resistance),
+    \item revocation and recovery (lost credentials/devices),
+    \item attribute minimization (use only what is needed for the task),
+    \item delegation (guardianship/power of attorney).
+  \end{itemize}
+  When reusing an external eID, be explicit about what you inherit (assurance
+  level, enrollment checks, and recovery policy).
+\end{solution}
+}
