Reverts from \href to \url to facilitate copy-paste

--- a/modules/week-4/tutorial-digital-postbox/abstract.tex
+++ b/modules/week-4/tutorial-digital-postbox/abstract.tex
@@ -30,4 +30,4 @@ and with encryption and digital signatures at a high level.
 
 \emph{Reading:}
 The official security requirements for Swedish digital postbox operators (DIGG):
-\href{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}{DIGG: security requirements for postbox operators}.
+\url{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}.
