--- a/modules/week-4/tutorial-digital-postbox/contents.tex
+++ b/modules/week-4/tutorial-digital-postbox/contents.tex
@@ -15,8 +15,7 @@ After the protocol lecture series (Week 5), we will return to your designs in
 Week 6 and use the protocol tools to make the missing parts explicit.
 
 Document your group's design in your group's tab in
-\href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
-
+\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
 \ltnote{%
   Pedagogical intent (try-first-tell-later + variation theory):
   Here students make a full, unconstrained design attempt.
@@ -151,7 +150,7 @@ We have the following requirements on the service:
   \begin{remark}
     DIGG\footnote{Myndigheten för digital förvaltning} sets the official 
     requirements, see
-    \href{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}{DIGG: security requirements for postbox operators}.
+    \url{https://www.digg.se/digitala-tjanster/digital-post/digital-post-for-dig-som-leverantor/allmanna-villkor/allmanna-villkor-fr.o.m.-16-januari-2023/bilaga-1-krav-pa-sakerhet-for-brevladeoperatorer}.
   \end{remark}
 \end{frame}
 
@@ -211,7 +210,7 @@ provide and why?
         \item Then pick one of the three functionalities.
         \item \alert<2>{Try to go into detail: detail the crypto protocol.}
         \item Document in your group's tab:
-          \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}
+          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
         \item Work for 20 minutes.
         \item Group presentations and discussions.
       \end{itemize}
@@ -322,7 +321,7 @@ Notes from the session:
         \setlength{\parsep}{0pt}
         \item Groups of around three--four people.
         \item Work for 20 minutes, document: 
-          \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
+          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
         \item Group presentations and discussions.
       \end{itemize}
     \end{block}
@@ -378,7 +377,7 @@ Notes from the session:
         system?
         How can we achieve those requirements?
       \item Document in your group's tab:
-        \href{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}{the group document}.
+        \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
     \end{itemize}
   \end{exercise}
 \end{frame}
