Replaces Google Doc with tinyurl

--- a/modules/week-4/tutorial-digital-postbox/contents.tex
+++ b/modules/week-4/tutorial-digital-postbox/contents.tex
@@ -15,7 +15,8 @@ After the protocol lecture series (Week 5), we will return to your designs in
 Week 6 and use the protocol tools to make the missing parts explicit.
 
 Document your group's design in your group's tab in
-\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
+          \url{https://tinyurl.com/tilkry26-postbox}
+%\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
 \ltnote{%
   Pedagogical intent (try-first-tell-later + variation theory):
   Here students make a full, unconstrained design attempt.
@@ -210,7 +211,8 @@ provide and why?
         \item Then pick one of the three functionalities.
         \item \alert<2>{Try to go into detail: detail the crypto protocol.}
         \item Document in your group's tab:
-          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
+          \url{https://tinyurl.com/tilkry26-postbox}
+          %\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
         \item Work for 20 minutes.
         \item Group presentations and discussions.
       \end{itemize}
@@ -321,7 +323,8 @@ Notes from the session:
         \setlength{\parsep}{0pt}
         \item Groups of around three--four people.
         \item Work for 20 minutes, document: 
-          \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
+          \url{https://tinyurl.com/tilkry26-postbox}
+          %\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
         \item Group presentations and discussions.
       \end{itemize}
     \end{block}
@@ -377,7 +380,8 @@ Notes from the session:
         system?
         How can we achieve those requirements?
       \item Document in your group's tab:
-        \url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
+          \url{https://tinyurl.com/tilkry26-postbox}
+        %\url{https://docs.google.com/document/d/1eRv-ekY04tdTCvwss4dK3juKlUez4CnoZihcC4J9mKc/edit}
     \end{itemize}
   \end{exercise}
 \end{frame}
